tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unterminated-block-comment.ari
fn main() -> i64 {
  /* comment starts here
  return 0;
}
